@@ -1,3 +1,5 @@
+Jan 05, 2026: libarchive 3.8.5 released
+
 Dec 01, 2025: libarchive 3.8.4 released
 
 Nov 17, 2025: libarchive 3.8.3 released
